RESOLVED FIXED259219
Don't drop the GPUProcess media assertion too promptly after playback ends
https://bugs.webkit.org/show_bug.cgi?id=259219
Summary Don't drop the GPUProcess media assertion too promptly after playback ends
Chris Dumez
Reported 2023-07-14 10:20:12 PDT
Don't drop the GPUProcess media assertion too promptly after playback ends, instead, drop it on a timer. There is a race where both the GPUProcess and the UIProcess get notified of a WebProcess exiting in parallel. When notified, the UIProcess would drop the media assertion on the GPUProcess, which could get it to suspend while the GPUProcess is STILL shutting down the media stack. Dropping the media assertion on a timer makes it so that the GPUProcess is now extremely unlikely to lose the race and will have properly shut down the media stack by the time it gets suspended.
Attachments
Chris Dumez
Comment 1 2023-07-14 10:20:22 PDT
Chris Dumez
Comment 2 2023-07-14 10:22:10 PDT
EWS
Comment 3 2023-07-14 12:41:31 PDT
Committed 266069@main (e89c9b432a4e): <https://commits.webkit.org/266069@main> Reviewed commits have been landed. Closing PR #15842 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.