Source/WebKit/UIProcess/WebProcessPool.h
@@ -631,6 +631,7 @@ private:
 #if HAVE(MEDIA_ACCESSIBILITY_FRAMEWORK)
     void setMediaAccessibilityPreferences(WebProcessProxy&);
 #endif
+    void clearAudibleActivity();
 
     Ref<API::ProcessPoolConfiguration> m_configuration;
 
@@ -803,6 +804,7 @@ private:
 #endif
     };
     std::optional<AudibleMediaActivity> m_audibleMediaActivity;
+    RunLoop::Timer m_audibleActivityTimer;
 
     WebProcessWithMediaStreamingCounter m_webProcessWithMediaStreamingCounter;
     bool m_mediaStreamingActivity { false };
